# voxels

./: .gitignore  .gitmodules  CMakeLists.txt  gmon.out  imgui.ini  voxels.trace
execs/: .clangd  CMakeLists.txt  main.cpp
include/: GL  GLFW  glm  imgui_impl_glfw.h  imgui_impl_opengl3.h  tracy
include/imgui/: imconfig.h  imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
res/shaders/: basic.frag  basic.vert  cube.frag  cube.vert  screen.frag  screen.vert
src/: Block.cpp  Block.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  EBO.cpp  EBO.h  GLCommon.cpp  GLCommon.h  Grid.cpp  Grid.h  Mesh.cpp  Mesh.h  SVO.cpp  SVO.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  WorldConstants.h  camera.cpp  camera.h  chunk.cpp  chunk.h  glcommon.cpp  glcommon.h  main.cpp  shader.cpp  shader.h  shape.cpp  (+1 more)
tests/: CMakeLists.txt  my_test.cpp
